--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,26 +3,39 @@ name: CI
 on:
   push:
   pull_request:
+
+# Least privilege: only read contents. (Additional scopes can be added per job if needed.)
 permissions:
   contents: read
-  actions: read
-  checks: read
-  security-events: write  # only for SARIF upload steps if used
+
 jobs:
   test:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout
+        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
+      - name: Set up Python
+        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
         with:
           python-version: "3.12"
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
-      - name: Lint
+      - name: Ruff (lint)
         run: ruff check .
-      - name: Type check
+      - name: Mypy (type check)
         run: mypy src
-      - name: Test
+      - name: Pytest
         run: pytest
+      - name: Show coverage summary
+        if: always()
+        run: |
+          if [ -f coverage.xml ]; then grep -E 'line-rate' coverage.xml || true; fi
+      # - name: Upload coverage artifact (optional)
+      #   uses: actions/upload-artifact@<pin-sha>
+      #   with:
+      #     name: coverage-xml
+      #     path: coverage.xml
