--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,18 @@ jobs:
       - name: Mypy (type check)
         run: mypy src
       - name: Pytest
-        run: pytest
+        run: pytest --cov-fail-under=70
       - name: Show coverage summary
         if: always()
         run: |
           if [ -f coverage.xml ]; then grep -E 'line-rate' coverage.xml || true; fi
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@b9fd7d16f6d7d1b5d2bec1a2887e65ceed900238 # v4
+        with:
+          files: coverage.xml
+          fail_ci_if_error: true
+          flags: unit
+          verbose: true
       # - name: Upload coverage artifact (optional)
       #   uses: actions/upload-artifact@<pin-sha>
       #   with:
