--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ dependencies = [
   "httpx>=0.27.0",
 ]
 
+[project.scripts]
+spcp_cli = "spcp.spcp_cli:main"
+
 [project.optional-dependencies]
 dev = [
   "pytest>=8.2.0",
