--- a/ruff.toml
+++ b/ruff.toml
@@ -1,5 +1,7 @@
 
-line-length = 100
 target-version = "py310"
-select = ["E","F","I","B","UP","Q","S","PGH","PTH","C4"]
+line-length = 100
+
+[lint]
+select = ["E", "F", "I", "B", "UP", "Q", "S", "PGH", "PTH", "C4"]
 ignore = ["S101"]
