feat: hardened receipt handling, outward schema, latest endpoint, integration test scaffolding, enhanced tailer

--- a/terminators/nginx-oqs/nginx.conf
+++ b/terminators/nginx-oqs/nginx.conf
@@ -29,7 +29,8 @@ http {
     proxy_set_header X-TLS-Protocol $ssl_protocol;
     proxy_set_header X-TLS-Cipher   $ssl_cipher;
     proxy_set_header X-TLS-SNI      $ssl_server_name;
-    proxy_set_header X-ALPN         $ssl_alpn;
+  # Align header names with control plane extractor (expects x-tls-alpn)
+  proxy_set_header X-TLS-ALPN     $ssl_alpn;
     proxy_set_header X-TLS-Group    $ssl_curve;
 
     location / {
