--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
+      - name: Ruff auto-fix (imports & simple style)
+        run: ruff check . --fix --exit-zero
       - name: Ruff (lint)
         run: ruff check .
       - name: Mypy (type check)
