--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,13 @@ jobs:
         run: mypy src
       - name: Pytest
         run: pytest
+      - name: Upload coverage to Codecov
+        if: success()
+        uses: codecov/codecov-action@b9fd7d16f6d7d1b5d2bec1a2887e65ceed900238 # v4.6.0 pinned
+        with:
+          files: coverage.xml
+          fail_ci_if_error: true
+          verbose: false
       - name: Show coverage summary
         if: always()
         run: |
