feat: add CBOM agent, control plane CBOM/DRIFT endpoints, PCH client & verifier modules, Envoy exporter filter, Postman collection, expanded test suite (JCS, PCH, CBOM, drift)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
 
 [project.scripts]
 spcp_cli = "spcp.spcp_cli:main"
+cbom-agent = "cbom_agent.cli:main"
 
 [project.optional-dependencies]
 dev = [
