--- a/terminators/nginx-oqs/nginx.conf
+++ b/terminators/nginx-oqs/nginx.conf
@@ -9,6 +9,9 @@ http {
     keepalive 16;
   }
 
+  # Allow larger auth/PCH headers (Authorization + PCH-*); 4 buffers of 8k each.
+  large_client_header_buffers 4 8k;
+
   server {
     listen 443 ssl;
     server_name _;
@@ -32,10 +35,15 @@ http {
   # Align header names with control plane extractor (expects x-tls-alpn)
   proxy_set_header X-TLS-ALPN     $ssl_alpn;
     proxy_set_header X-TLS-Group    $ssl_curve;
+  # Expose underlying TLS session id for PCH channel binding (may be empty for some handshakes)
+  proxy_set_header X-TLS-Session-ID $ssl_session_id;
 
     location / {
       proxy_http_version 1.1;
       proxy_set_header Connection "";
+  # Preserve original host & scheme for signature authority component and evidence
+  proxy_set_header Host $host;
+  proxy_set_header X-Forwarded-Proto $scheme;
       proxy_pass http://app_upstream;
     }
   }
