chore(ci): pin actions to SHAs, add least-priv perms, branch protection docs, central dependabot config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ permissions:
 jobs:
   test:
     runs-on: ubuntu-latest
+    # No write permissions required for standard CI
     permissions:
       contents: read
     steps:
